updated html document head, body elements.